<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/itemBattleMoveName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_default_attack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemBattleMovePower_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_default_power"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/itemBattleMovePuissance"
        app:layout_constraintStart_toStartOf="@+id/itemBattleMovePuissance"
        app:layout_constraintTop_toBottomOf="@+id/itemBattleMovePuissance"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/itemBattleMoveType_imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/picture_description_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bug" />

    <ImageView
        android:id="@+id/itemBattleMoveCategoryAttack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/picture_description_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemBattleMoveType_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bug" />

    <TextView
        android:id="@+id/itemBattleMovePuissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_battle_power"
        app:layout_constraintEnd_toStartOf="@+id/itemBattleMovePrecision"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toEndOf="@+id/itemBattleMoveName_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemBattleMovePrecision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/label_battle_precision"
        app:layout_constraintEnd_toStartOf="@+id/itemBattleMoveCategoryAttack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itembattleMovePrecision_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_default_precision"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/itemBattleMovePrecision"
        app:layout_constraintStart_toStartOf="@+id/itemBattleMovePrecision"
        app:layout_constraintTop_toBottomOf="@+id/itemBattleMovePrecision" />
</androidx.constraintlayout.widget.ConstraintLayout>