<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HelpScreenFragment">

    <ImageView
        android:id="@+id/helpBackground_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/picture_description_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/helpType_imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/picture_description_type"
        android:src="@drawable/electric"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/multiplier2_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_multiplier_2"
        app:layout_constraintBottom_toTopOf="@+id/centralHorizontalDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topHorizontalDivider" />

    <TextView
        android:id="@+id/multiplier05_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_multiplier_05"
        app:layout_constraintBottom_toTopOf="@+id/bottomHorizontalDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centralHorizontalDivider" />

    <TextView
        android:id="@+id/multiplier0_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_multiplier_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomHorizontalDivider" />

    <View
        android:id="@+id/centralVerticalDivider"
        android:layout_width="0.5dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/dividerColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiplier05_textView"
        app:layout_constraintTop_toBottomOf="@+id/helpType_imageView" />

    <TextView
        android:id="@+id/from_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_from"
        app:layout_constraintEnd_toStartOf="@+id/centralVerticalDivider"
        app:layout_constraintStart_toEndOf="@+id/multiplier2_textView"
        app:layout_constraintTop_toTopOf="@+id/centralVerticalDivider" />

    <TextView
        android:id="@+id/to_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centralVerticalDivider"
        app:layout_constraintTop_toTopOf="@+id/centralVerticalDivider" />

    <View
        android:id="@+id/topHorizontalDivider"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/dividerColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_textView" />

    <View
        android:id="@+id/centralHorizontalDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/bottomHorizontalDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topHorizontalDivider" />

    <View
        android:id="@+id/bottomHorizontalDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centralHorizontalDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/doubleDamageFrom_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/centralHorizontalDivider"
        app:layout_constraintEnd_toStartOf="@+id/centralVerticalDivider"
        app:layout_constraintStart_toEndOf="@+id/multiplier05_textView"
        app:layout_constraintTop_toBottomOf="@+id/topHorizontalDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/doubleDamageTo_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/doubleDamageFrom_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centralVerticalDivider"
        app:layout_constraintTop_toTopOf="@+id/doubleDamageFrom_recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/halfDamageFrom_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomHorizontalDivider"
        app:layout_constraintEnd_toEndOf="@+id/doubleDamageFrom_recyclerView"
        app:layout_constraintStart_toStartOf="@+id/doubleDamageFrom_recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/centralHorizontalDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/halfDamageTo_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/halfDamageFrom_recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/doubleDamageTo_recyclerView"
        app:layout_constraintStart_toStartOf="@+id/doubleDamageTo_recyclerView"
        app:layout_constraintTop_toTopOf="@+id/halfDamageFrom_recyclerView"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noDamageFrom_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/halfDamageFrom_recyclerView"
        app:layout_constraintStart_toStartOf="@+id/halfDamageFrom_recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/bottomHorizontalDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noDamageTo_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/noDamageFrom_recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/halfDamageTo_recyclerView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/halfDamageTo_recyclerView"
        app:layout_constraintTop_toTopOf="@+id/noDamageFrom_recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>